--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "build-prod": "ng build --configuration production"
   },
   "private": true,
   "dependencies": {
@@ -15,9 +16,15 @@
     "@angular/compiler": "^17.3.0",
     "@angular/core": "^17.3.0",
     "@angular/forms": "^17.3.0",
+    "@angular/material": "^17.3.0",
     "@angular/platform-browser": "^17.3.0",
     "@angular/platform-browser-dynamic": "^17.3.0",
     "@angular/router": "^17.3.0",
+    "@jamesbenrobb/app-shell": "^0.0.8",
+    "@jamesbenrobb/app-shell-routing-adaptors": "^0.0.8",
+    "@jamesbenrobb/dynamic-routes": "^0.0.1",
+    "@jamesbenrobb/ui": "^1.0.40",
+    "normalize.css": "^8.0.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
